uCast Jquery UI Updates

--- a/uCastServer/views/index.jade
+++ b/uCastServer/views/index.jade
@@ -21,9 +21,9 @@ block content
                     img(class="caston" , src="../images/casticon_on.png") 
 
   div.player
-    table(cellspacing="2",cellpadding="2")
+    table(cellspacing="3",cellpadding="3")
         tr
-            thead
+            td
                 span.playerHeader
                 hr
         tr
@@ -31,7 +31,7 @@ block content
                 img(id="imgStop", src="../images/stop.png")
                 &nbsp;&nbsp;
                 img(id="imgPlayPause", src ="../images/pause.png")
-                div.progress
+                div.progressbar
   br
   h4.headerFiles
   div.files
