uCast Media Player Update

--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -1,20 +1,22 @@
 ﻿html 
-  background: url(../images/bg.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../images/bg.jpg) no-repeat center center fixed
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
 .logocontainer
 	width: 100%
 table.logocontainer td
 	text-align: left
 .player
-	border: 1px solid;
-    border-radius: 5px;
+	display: none
+	border: 1px solid
+	border-radius: 5px
+	
 div.player table
 	width: 100%
-	
-
+.mediacontrol
+	cursor: pointer
 body
   padding: 10px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
@@ -23,16 +25,15 @@ a
   color: #00B7FF
 
 .logo
-	content:url(../images/logo.jpg);	
+	content:url(../images/logo.jpg)	
 
 .caston
-  background-repeat: no-repeat;
-  width: 51px;
-  height: 37px;
+  display: none
+  background-repeat: no-repeat
+  width: 51px
+  height: 37px
   cursor: pointer
 
-.progressbar
-  display: inline
 
 
 	
