--- a/uCastServer/public/stylesheets/style.css
+++ b/uCastServer/public/stylesheets/style.css
@@ -12,11 +12,15 @@ table.logocontainer td {
   text-align: left;
 }
 .player {
+  display: none;
   border: 1px solid;
   border-radius: 5px;
 }
 div.player table {
   width: 100%;
+}
+.mediacontrol {
+  cursor: pointer;
 }
 body {
   padding: 10px;
@@ -29,11 +33,9 @@ a {
   content: url("../images/logo.jpg");
 }
 .caston {
+  display: none;
   background-repeat: no-repeat;
   width: 51px;
   height: 37px;
   cursor: pointer;
-}
-.progressbar {
-  display: inline;
 }
