--- a/uCastServer/public/stylesheets/style.css
+++ b/uCastServer/public/stylesheets/style.css
@@ -5,6 +5,19 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+body {
+  font-family: Arial;
+  font-size: 12px;
+  color: #000;
+}
+hr {
+  border: 0;
+  color: #9e9e9e;
+  background-color: #9e9e9e;
+  height: 1px;
+  text-align: left;
+  margin-right: 10px;
+}
 .logocontainer {
   width: 100%;
 }
@@ -16,15 +29,14 @@ table.logocontainer td {
   border: 1px solid;
   border-radius: 5px;
 }
+select {
+  width: 200px;
+}
 div.player table {
   width: 100%;
 }
 .mediacontrol {
   cursor: pointer;
-}
-body {
-  padding: 10px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 a {
   color: #00b7ff;
@@ -35,7 +47,7 @@ a {
 .caston {
   display: none;
   background-repeat: no-repeat;
-  width: 51px;
-  height: 37px;
+  width: 44px;
+  height: 30px;
   cursor: pointer;
 }
