--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -4,6 +4,18 @@
   -moz-background-size: cover
   -o-background-size: cover
   background-size: cover
+body
+	font-family: Arial;
+	font-size: 12px;
+	color: #000000;
+hr
+    border: 0;
+    color: #9E9E9E;
+    background-color: #9E9E9E;
+    height: 1px;
+    text-align: left;
+    margin-right:10px;
+
 .logocontainer
 	width: 100%
 table.logocontainer td
@@ -12,15 +24,14 @@ table.logocontainer td
 	display: none
 	border: 1px solid
 	border-radius: 5px
-	
+select
+    width: 200px;
+    	
 div.player table
 	width: 100%
 .mediacontrol
 	cursor: pointer
-body
-  padding: 10px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-  
+
 a
   color: #00B7FF
 
@@ -30,8 +41,8 @@ a
 .caston
   display: none
   background-repeat: no-repeat
-  width: 51px
-  height: 37px
+  width: 44px
+  height: 30px
   cursor: pointer
 
 
