--- a/uCastServer/views/index.jade
+++ b/uCastServer/views/index.jade
@@ -43,5 +43,10 @@ block content
                        td(width="90%")
                           div(id="progressbar", style="height:20px")
   br
-  h4.headerFiles
+  table
+    tr
+        td
+            h4.headerFiles
+        td  
+            img.playselected(id='playselected', alt='Play Selected')
   div.files
