--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -44,7 +44,12 @@ a
   width: 44px
   height: 30px
   cursor: pointer
-
+.playselected
+  display: none
+  background-repeat: no-repeat
+  cursor: pointer
+  width: 24px
+  height: 24px
 
 
 	
