--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -22,6 +22,7 @@ table.logocontainer td
 	text-align: left
 .player
 	display: none
+	margin:5px 5px
 	border: 1px solid
 	border-radius: 5px
 select
@@ -50,6 +51,5 @@ a
   cursor: pointer
   width: 24px
   height: 24px
-
-
-	
+.form-inline > * 
+   margin:5px 3px
