--- a/uCastServer/views/index.jade
+++ b/uCastServer/views/index.jade
@@ -7,46 +7,33 @@ block content
             img(class="logo")
   hr
   div.container-fluid
-    form(class='form-inline' , role='form')
-      
+    form.form-inline(role="form")
                     div.form-group
                         select.form-control(id="ddlTypeOfMedia", name="ddlTypeOfMedia")
                             option(value="video" selected="selected") Videos
                             option(value="audio") Songs
                             option(value="image") Photos
-
-
-               
-                
                     div.form-group
-                        input(type="text",placeholder="Enter Path", class='form-control', name="dirLocation",size="80") 
-                
+                        input(type="text",placeholder="Enter Path", class="form-control", name="dirLocation", size="80") 
                     div.form-group
-                        button(type="button", name="findFiles" , class='btn btn-primary')
+                        button(type="button", name="findFiles" , class="btn btn-primary")
                             i(class="glyphicon glyphicon-search") 
-                            |Find
-                             
-                
+                            |&nbsp;Find
                     div.form-group
                         img(class="caston" , src="../images/casticon_on.png") 
-
-  
-  div(class="player container-fluid")
-    table(cellspacing="3",cellpadding="3",width="100%")
-        tr
-            td
-                span.playerHeader
-                hr
-        tr
-            td
-                table(width="100%")
-                    tr
-                       td(width="5%")
-                          img.mediacontrol(id="imgStop", src="../images/stop.png")
-                          &nbsp;&nbsp;
-                          img.mediacontrol(id="imgPlayPause", src ="../images/pause.png")
-                       td(width="90%")
-                          div(id="progressbar", style="height:20px")
+  br  
+  div.container-fluid
+      div(class="player")
+        div.container-fluid
+          span.playerHeader(class="text-primary")
+       
+        div.container-fluid(class="form-inline",role="form")
+          div.form-group
+              img.mediacontrol(id="imgStop", src="../images/stop.png")
+          div.form-group
+              img.mediacontrol(id="imgPlayPause", src ="../images/pause.png")
+          div.form-group
+              div(id="progressbar", style="height:20px")
   br
   div.container-fluid
       table
@@ -54,5 +41,5 @@ block content
             td
                 h4.headerFiles
             td  
-                img.playselected(id='playselected', alt='Play Selected')
+                img.playselected(id="playselected", alt="Play Selected")
   div(class="files container-fluid")
