--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -20,16 +20,20 @@ hr
 	width: 100%
 table.logocontainer td
 	text-align: left
+.playercontainer
+	
 .player
 	display: none
-	margin:5px 5px
+	margin: 5px
 	border: 1px solid
 	border-radius: 5px
+	border-color: lightgrey
+	width: 100%
+	
 select
     width: 200px;
     	
-div.player table
-	width: 100%
+
 .mediacontrol
 	cursor: pointer
 
