uCast Solution renames and readme edit

--- a/uCastServer/public/stylesheets/style.styl
+++ b/uCastServer/public/stylesheets/style.styl
@@ -24,11 +24,15 @@ table.logocontainer td
 	
 .player
 	display: none
-	margin: 5px
-	border: 1px solid
-	border-radius: 5px
-	border-color: lightgrey
 	width: 100%
+	border-style: solid
+	border-color: lightgray
+    border-width: 1px
+	
+
+table.player td
+	padding: 4px;
+
 	
 select
     width: 200px;
