--- a/uCastServer/public/stylesheets/style.css
+++ b/uCastServer/public/stylesheets/style.css
@@ -27,11 +27,13 @@ table.logocontainer td {
 .playercontainer,
 .player {
   display: none;
-  margin: 5px;
-  border: 1px solid;
-  border-radius: 5px;
-  border-color: #d3d3d3;
   width: 100%;
+  border-style: solid;
+  border-color: #d3d3d3;
+  border-width: 1px;
+}
+table.player td {
+  padding: 4px;
 }
 select {
   width: 200px;
