--- a/uCastServer/views/index.jade
+++ b/uCastServer/views/index.jade
@@ -12,7 +12,6 @@ block content
                         select.form-control(id="ddlTypeOfMedia", name="ddlTypeOfMedia")
                             option(value="video" selected="selected") Videos
                             option(value="audio") Songs
-                            option(value="image") Photos
                     div.form-group
                         input(type="text",placeholder="Enter Path", class="form-control", name="dirLocation", size="80") 
                     div.form-group
@@ -32,7 +31,7 @@ block content
             img.mediacontrol(id="imgStop", src="../images/stop.png")
           td(width="2%")
             img.mediacontrol(id="imgPlayPause", src ="../images/pause.png") 
-          td(width="96%")        
+          td.pbar(width="96%")        
             div(id="progressbar", style="height:20px;")
   br
   div.container-fluid
